# magscope02

./: 90_example.py  90_example2.py  Readme.md  apollo_camera_router.py  apollo_property_schema.py  live_display.py  main.py  main2.py  properties.py  requirements.txt  scope.py  scope_discovery.py  test_get_image.py
camera/: camera_settings_model.py  pyscope_camera_router.py
modules/numextension/: numextension.cp311-win_amd64.pyd  pyproject.toml  setup.py
modules/numextension/numextension.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyscope/: DEAPI.py  de.py  dmsem.cfg.template  dmsem.py  fei.py  instruments.cfg  properties.py  simccdcamera2.py  simtem.py  tem.py  tfs_utapi.py  version.py
scope/: scope_settings_model.py
support/: camera_patterns_docs.md
testing/: 90_example.py  90_example2.py  de_image_fix_script.py  image_comparison_diagnostic.py  targeted_de_diagnostic.py  test01.py  test02.py  test03.py  test04.py  test05.py  test06.py  test07.py  test08.py  test09.py  test10.py  test11.py  test12.py  test13.py  test14.py  test15.py  test16.py  test17.py  test18.py  test_get_image.py  universal_pyscope_properties_DEApollo_Full-DE_20250812_131907.json
