[build-system]
requires = ["setuptools>=42", "wheel", "numpy>=1.25.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numextension"
version = "1.0.0"
description = "Extension to numpy for scientific computing"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=2.0.0,<2.3.0",
]
authors = [
    {name = "NumExtension Team"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["numextension*"]